[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ticker.gd" type="Script" id=1]
[ext_resource path="res://sprites/symbols/fontawesome/fast.svg" type="Texture" id=2]
[ext_resource path="res://sprites/symbols/fontawesome/cogs.svg" type="Texture" id=3]
[ext_resource path="res://scripts/city_status.gd" type="Script" id=4]
[ext_resource path="res://sprites/symbols/fontawesome/coins.svg" type="Texture" id=5]
[ext_resource path="res://sprites/symbols/fontawesome/city.svg" type="Texture" id=6]
[ext_resource path="res://sprites/symbols/fontawesome/envelope.svg" type="Texture" id=7]
[ext_resource path="res://sprites/symbols/fontawesome/slow.svg" type="Texture" id=8]
[ext_resource path="res://sprites/symbols/fontawesome/population.svg" type="Texture" id=9]
[ext_resource path="res://sprites/symbols/fontawesome/pie-chart.svg" type="Texture" id=10]
[ext_resource path="res://sprites/symbols/fontawesome/calendar.svg" type="Texture" id=11]

[node name="Status" type="Panel"]
anchor_top = 0.891667
anchor_right = 1.0
anchor_bottom = 1.00333
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SettingsBtn" type="Button" parent="."]
anchor_left = 0.0115391
anchor_top = 0.193259
anchor_right = 0.0525548
anchor_bottom = 0.670871
margin_top = -9.53674e-07
hint_tooltip = "Meet"
size_flags_horizontal = 4
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StatCtr" type="HBoxContainer" parent="."]
anchor_left = 0.0566406
anchor_top = 0.208955
anchor_right = 0.601562
anchor_bottom = 0.746269
margin_top = 9.53674e-07
custom_constants/separation = 50
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonCtr" type="HBoxContainer" parent="StatCtr"]
margin_left = 30.0
margin_right = 312.0
margin_bottom = 36.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaxBtn" type="Button" parent="StatCtr/ButtonCtr"]
margin_right = 42.0
margin_bottom = 36.0
hint_tooltip = "RCI"
size_flags_horizontal = 4
icon = ExtResource( 10 )

[node name="ToolsBtn" type="Button" parent="StatCtr/ButtonCtr"]
margin_left = 52.0
margin_right = 94.0
margin_bottom = 36.0
hint_tooltip = "Tools"
size_flags_horizontal = 4
icon = ExtResource( 6 )

[node name="AdvsiorBtn" type="Button" parent="StatCtr/ButtonCtr"]
margin_left = 104.0
margin_right = 146.0
margin_bottom = 36.0
hint_tooltip = "Meet"
size_flags_horizontal = 4
icon = ExtResource( 7 )

[node name="VSeparator" type="VSeparator" parent="StatCtr/ButtonCtr"]
margin_left = 156.0
margin_right = 160.0
margin_bottom = 36.0

[node name="TurtleBtn" type="Button" parent="StatCtr/ButtonCtr"]
margin_left = 170.0
margin_right = 211.0
margin_bottom = 36.0
hint_tooltip = "Slow"
toggle_mode = true
icon = ExtResource( 8 )

[node name="CheetaBtn" type="Button" parent="StatCtr/ButtonCtr"]
margin_left = 221.0
margin_right = 268.0
margin_bottom = 36.0
hint_tooltip = "Fast"
toggle_mode = true
icon = ExtResource( 2 )

[node name="VSeparator2" type="VSeparator" parent="StatCtr/ButtonCtr"]
margin_left = 278.0
margin_right = 282.0
margin_bottom = 36.0

[node name="NameDate" type="VBoxContainer" parent="StatCtr"]
margin_left = 362.0
margin_right = 450.0
margin_bottom = 36.0
alignment = 1

[node name="CityNameLbl" type="Label" parent="StatCtr/NameDate"]
margin_top = 2.0
margin_right = 88.0
margin_bottom = 16.0
text = "City Name"
align = 1

[node name="YearCtr" type="HBoxContainer" parent="StatCtr/NameDate"]
margin_top = 20.0
margin_right = 88.0
margin_bottom = 34.0

[node name="CalIcon" type="TextureRect" parent="StatCtr/NameDate/YearCtr"]
margin_right = 10.0
margin_bottom = 14.0
texture = ExtResource( 11 )
stretch_mode = 4

[node name="CalendarLbl" type="Label" parent="StatCtr/NameDate/YearCtr"]
margin_left = 14.0
margin_right = 88.0
margin_bottom = 14.0
text = "01/01/2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopBudget" type="VBoxContainer" parent="StatCtr"]
margin_left = 500.0
margin_right = 526.0
margin_bottom = 36.0
alignment = 1

[node name="BudgetCtr" type="HBoxContainer" parent="StatCtr/PopBudget"]
margin_top = 2.0
margin_right = 26.0
margin_bottom = 16.0

[node name="CoinsIcon" type="TextureRect" parent="StatCtr/PopBudget/BudgetCtr"]
margin_right = 14.0
margin_bottom = 14.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="BudgetLbl" type="Label" parent="StatCtr/PopBudget/BudgetCtr"]
margin_left = 18.0
margin_right = 26.0
margin_bottom = 14.0
text = "0"

[node name="PopCtr" type="HBoxContainer" parent="StatCtr/PopBudget"]
margin_top = 20.0
margin_right = 26.0
margin_bottom = 34.0

[node name="PopIcon" type="TextureRect" parent="StatCtr/PopBudget/PopCtr"]
margin_right = 14.0
margin_bottom = 14.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="PopLbl" type="Label" parent="StatCtr/PopBudget/PopCtr"]
margin_left = 18.0
margin_right = 26.0
margin_bottom = 14.0
text = "0"

[node name="Ticker" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 622.0
__meta__ = {
"_edit_use_anchors_": false
}
